# notes-app-desktop

./: .eslintrc  .gitignore  .prettierrc  LICENSE  package.json
.github/workflows/: build.yaml
core/: .gitignore  Cargo.toml  build.rs
core/realm_rs/: CMakeLists.txt  main.cpp  realm_rs.h
core/src/: lib.rs
core/src/cpp/: bridge.cpp  bridge.h
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-01-22-190736_create_notes/: up.sql
src-tauri/src/: main.rs  schema.rs
src-tauri/src/database/: mod.rs  note.rs  setting.rs  user.rs
src-tauri/src/model/: mod.rs  note.rs  setting.rs  user.rs
src-tauri/src/services/: authentication.rs  mod.rs  sync.rs
src/components/FixedButton/: index.tsx  styles.tsx
src/components/Header/: index.tsx  styles.tsx
src/components/Modal/: index.tsx  styles.tsx
src/components/NewNoteButton/: index.tsx  styles.tsx
src/components/Popover/: index.tsx  styles.tsx
src/components/Searchbar/: index.tsx  styles.tsx
src/components/Sidebar/: index.tsx  styles.tsx
src/components/Sidebar/components/CloseModal/: index.tsx
src/components/Sidebar/components/SettingsModal/: index.tsx  styles.tsx
src/contexts/: authContext.tsx
src/pages/EditionPage/: index.tsx  styles.tsx
src/pages/HomePage/: index.tsx  styles.tsx
src/pages/NewNotesPage/: index.tsx  styles.tsx
src/services/: database.ts  notesService.ts  settingsService.ts
src/types/: index.ts  styled.d.ts
