[package]
name = "notes-core"
crate-type = ["cdylib"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"
cxx-build = "1.0"

[dependencies]
cxx = { version = "1.0.117", features = ["c++17"] }
