[package]
name = "notes-app-desktop"
version = "2.0.1"
description = "Aplicação de gerenciamento de anotações"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
r2d2 = "0.8.10"
tauri-plugin-oauth = "0.0.0-alpha.0"
reqwest = { version = "0.11.23", features = [ "blocking", "json" ] }
notes-core = { path = "../core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
